tests/toylang/neg/000794_mutation.toylang
program a = { a = sleep a + a; } .
